<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ShoppingCartActivity">

    <Button
        android:id="@+id/cart_activity_cancel_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_back"
        android:textAlignment="center"
        android:layout_marginStart="@dimen/cart_activity_btn_left_margin"
        android:layout_marginTop="@dimen/cart_activity_btn_top_margin"
        android:layout_alignParentStart="true"
        android:background="@drawable/search_bar_background"
        />

    <TextView
        android:id="@+id/cart_activity_tv_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply_cart"
        android:textSize="@dimen/cart_activity_tv_text_size"
        android:layout_marginTop="@dimen/cart_activity_tv_top_margin"
        android:fontFamily="@string/text_style"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        />

    <Button
        android:id="@+id/cart_activity_accept_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sent_data"
        android:layout_marginEnd="@dimen/cart_activity_btn_right_margin"
        android:layout_marginTop="@dimen/cart_activity_btn_top_margin"
        android:layout_alignParentEnd="true"
        android:background="@drawable/search_bar_background"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cart_activity_rv_chosen_books"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cart_activity_cancel_btn"
        android:layout_marginTop="@dimen/cart_activity_rv_top_margin"
        >
    </androidx.recyclerview.widget.RecyclerView>


</RelativeLayout>