<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.FullBookDescription"
    tools:showIn="@layout/activity_full_book_description"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_marginTop="@dimen/full_book_description_book_nsv_top_margin"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/full_book_description_activity_nsv_ll_margin"
        >

        <TextView
            android:id="@+id/full_book_description_nsv_tv_book_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/full_book_description_book_title_text_size"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/full_book_description_nsv_tv_book_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/full_book_description_book_author_text_size"
            android:layout_marginTop="10dp"
            />

        <View
            android:layout_width="wrap_content"
            android:layout_height="@dimen/full_book_description_activity_bottom_border"
            android:background="@color/black95"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:id="@+id/full_book_description_nsv_ll_tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/full_book_description_book_author_text_size"
            android:lineSpacingExtra="@dimen/full_book_description_activity_tv_line_spacing_extra"
            android:layout_marginTop="10dp"
            />

        <View
            android:layout_width="wrap_content"
            android:layout_height="@dimen/full_book_description_activity_bottom_border"
            android:background="@color/black95"
            android:layout_marginTop="10dp"
            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/full_book_description_book_title_text_size"
            android:layout_marginTop="10dp"
            android:text="Additional info"
            android:textStyle="bold"
            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/additional_info_subtitle"
            android:textSize="@dimen/full_book_description_activity_additional_info_text_size"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/full_book_description_nsv_tv_book_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/full_book_description_activity_additional_info_text_size"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/additional_info_publishers"
            android:textSize="@dimen/full_book_description_activity_additional_info_text_size"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/full_book_description_nsv_tv_book_publishers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/full_book_description_activity_additional_info_text_size"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/additional_info_isbn10"
            android:textSize="@dimen/full_book_description_activity_additional_info_text_size"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/full_book_description_nsv_tv_book_isbn10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/full_book_description_activity_additional_info_text_size"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/additional_info_isbn13"
            android:textSize="@dimen/full_book_description_activity_additional_info_text_size"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/full_book_description_nsv_tv_book_isbn13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/full_book_description_activity_additional_info_text_size"
            android:layout_marginTop="10dp"
            />



    </LinearLayout>

</androidx.core.widget.NestedScrollView>